trunk/Archive2/c9/20865e51d83fd9/output
main.cpp:39:37: error: cannot specialize (with 'template<>') a member of an unspecialized template
int LuaFunction<Args...>::Dummy<N>::QueryArg<int>()
                                    ^
main.cpp:48:39: error: cannot specialize (with 'template<>') a member of an unspecialized template
float LuaFunction<Args...>::Dummy<N>::QueryArg<float>()
                                      ^
2 errors generated.
